[package]
name = "pcli-sync"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
derive = "1.0.0"
feature = "0.5.1"
features = "0.10.0"
log = "0.4.17"
notify = "5.1.0"
pretty_env_logger = "0.4.0"
thiserror = "1.0.40"
pcli = { path = "../pcli" }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "1.3.2", features = ["v4"] }
execute = "0.2.12"
dirs = "5.0.1"
exitcode = "1.1.2"
anyhow = "1.0.71"
